Fixes + Remove Unnecessary Images

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1412,6 +1412,7 @@
   "NeutralKnowCyberStarDead": "<color=#ffab1b>Neutrals</color> know when the <color=#ee4a55>Celebrity</color> dies",
   "JesterCanUseButton": "Can call emergency meetings",
   "MarioVentNumWin": "Number of Vents to win",
+  "MarioVentButtonText": "Vent",
   "CanCheckCamera": "Can track camera usage",
   "SansDefaultKillCooldown": "Starting kill cooldown",
   "SansReduceKillCooldown": "Reduce kill cooldown by",
@@ -1870,25 +1871,6 @@
   "AirshipReactorTimeLimit": "Reactor Time Limit on Airship",
   "CamerasDisabledNotify": "<color=#ffff00>Cameras are globally disabled by the host</color>",
   "CommandList": "★ Command list:",
-  "Command.now": "→ Display active Settings",
-  "Command.roles": "[RoleName] → Display Role description",
-  "Command.myrole": "→ Displays a description of your role",
-  "Command.lastresult": "→ Display match results",
-  "Command.winner": "→ Display winners",
-  "CommandOtherList": "● Other commands:",
-  "Command.color": "[Color] → Change your color",
-  "Command.rename": "[Name] → Change Host Name",
-  "Command.quit": "→ I don't want to enter this lobby anymore",
-  "CommandHostList": "▲ Host Commands:",
-  "Command.say": "[Content] → Send message as Host",
-  "Command.mw": "[Seconds] → Set the message waiting duration",
-  "Command.solvecover": "→ Fix an issue where role names overlap the messages",
-  "Command.kill": "[Player ID] → Kill assigned player",
-  "Command.exe": "[Player ID] → Eject assigned player",
-  "Command.level": "[Level] → Change your in-game level",
-  "Command.idlist": "→ Display a list of player IDs",
-  "Command.qq": "→ Lobby will be posted on QQ website (China only)",
-  "Command.dump": "→ Output Log to Desktop",
   "DisableSunnyboy": "Disable <color=#ff9902>Sunnyboy</color>",
   "DisableBard": "Disable <color=#ff1919>Bard</color>",
   "DisableSaboteur": "Disable <color=#ff1919>Saboteur</color>",
@@ -2327,7 +2309,7 @@
   "ERR-000-804-1": "EHR does not support the Vanilla HnS, so unloaded.",
   "ERR-001-000-3": "Main dictionary has duplicated keys.",
   "DeathCommand": "<#ffffff>You were killed by </color>{0}<#ffffff>\\nTheir role is </color>{1}",
-  "DefaultSystemMessageTitle": "★ System message ★",
+  "DefaultSystemMessageTitle": "➡ SYSTEM MESSAGE ⬅",
   "MessageFromTheHost": "★ Host message ★",
   "SayTitle": "★ Moderator message ★",
   "MessageFromEAC": "★ EAC ★",
