Try fixing disconnects, Add Socialite & Lyncher, Rework /help

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -792,7 +792,7 @@
   "SleuthInfoLong": "(Add-ons):\\nYou know the roles of the bodies you report.",
   "AntiTPInfoLong": "(Add-ons):\\nYou cannot be teleported.",
   "TaskcounterInfoLong": "(Add-ons):\\nTask Counter can see the total number of tasks completed (by everyone all together) next to their role name, which updates in real-time.",
-  "BloodlustInfoLong": "(Add-ons):\\nYou can kill. You are a neutral killer, while also keeping the ability of your role (as much as host-only limitations allow).",
+  "BloodlustInfoLong": "(Add-ons):\\nYou can kill. You are a neutral killer, while also keeping the ability of your role (as much as host-only limitations allow).\\nIf your role has an ability to be used through the kill button, you can single-click to use your ability and double-click the kill button to kill.",
   "StainedInfoLong": "(Add-ons):\\nYour killer gets a violet name for 3 seconds.",
   "ClumsyInfoLong": "(Add-ons):\\nWhile walking, you have a small chance of tripping, meaning you freeze for a few seconds.",
   "MischievousInfoLong": "(Add-ons):\\nYou can sabotage.",
@@ -1664,6 +1664,7 @@
   "JackalCanRecruitSidekick": "Can recruit <color=#00b4eb>Sidekick</color>",
   "SidekickSettings": "Show Sidekick Settings",
   "JackalCanRecruitImpostors": "Can recruit <color=#ff1919>Impostors</color>",
+  "JackalCanRecruitMadmates": "Can recruit <color=#ff1919>Madmates</color>",
   "SKPromotesToJackal": "<color=#00b4eb>Sidekick</color> gets promoted to <color=#00b4eb>Jackal</color> on <color=#00b4eb>Jackal</color> death",
   "PromotedSKCanRecruit": "New <color=#00b4eb>Jackal</color> can recruit new <color=#00b4eb>Sidekick</color>",
   "SKCanKill": "<color=#00b4eb>Sidekick</color> can kill",
@@ -1687,6 +1688,7 @@
   "TraitorKillImpostor": "As the Traitor, you cannot kill Impostors",
   "KnightedKillMonarch": "As the Knighted player, you cannot kill the Monarch",
   "RookieKillRoundOne": "As a Rookie, you cannot kill in the first round",
+  "SocialiteTarget": "The target of the Socialite cannot be killed\\nYou were added to their Guest List",
   "SomeSortOfProtection": "This player is shielded due to a role-specific action",
   "HexButtonText": "Hex",
   "EscapeeAbilityButtonText": "TP",
@@ -2285,6 +2287,7 @@
   "LoadingHint.43": "Did you know that you can't know everything?",
   "LoadingHint.44": "Did you know?\nThe Dev's favorite number is 44",
   "LoadingHint.45": "Did you know that you can use the yield statement in an iterator to provide the next value or signal the end of an iteration in a loop since async doesn't work in BepInEx?\nYeah, me neither",
+  "Vision": "Vision",
   "UnsupportedVersion": "Unsupported Among Us version.\\nPlease update Among Us.",
   "Error.MeetingException": "Error: {0}\\r\\nPlease use SHIFT+M+ENTER to end the meeting",
   "Error.InvalidRoleAssignment": "Error: Invalid role found for a player during role assignment({0})",
@@ -3051,6 +3054,10 @@
   "SchrodingersCat.WinsWithCrewIfNotAttacked": "Wins with crewmates if not attacked",
   "SchrodingersCat.Notify.KillerRecruited": "You have recruited the {1}! {0} now has the same role as you.",
   "SchrodingersCat.Notify.RecruitedByKiller": "You have been recruited by the {1}! You now have the same role as {0}.",
+  "Socialite": "Socialite",
+  "SocialiteInfo": "Know Who Interacts With Your Target",
+  "SocialiteInfoLong": "(Crewmates):\\nAs the Socialite, you can use your kill button to mark your target every round. When someone tries to kill your target, the kill gets blocked and they get added to your Guest List (they know about this). Players' names that are in your Guest List are shown in black. Players on the Guest List can kill your target. You can also add players to your Guest List by voting them.",
+  "Socialite.Suffix": "<size=80%>Your target is {0}</size>",
   "Cherokious": "Cherokious",
   "CherokiousInfo": "Do tasks to get Bullets to Kill",
   "CherokiousInfoLong": "(Neutrals):\\nAs the Cherokious, you can get bullets by completing tasks. You can kill by petting your pet near someone. You can only kill if you have bullets.",
@@ -4205,6 +4212,12 @@
   "SleepInfo": "You Sleep During Lights Out",
   "SleepInfoLong": "(Add-ons):\\nYou sleep during lights out. You can't see anything, and you cannot move. You can only wake up when the lights are back on. If someone with the Glow add-on comes near you, you fully wake up and lose this add-on.",
   "Prefix.Sleep": "Sleeping",
+  "Lyncher": "Lyncher",
+  "LyncherInfo": "Get Letters From Everyone's Roles",
+  "LyncherInfoLong": "(Crewmates):\\nAs the Lyncher, each X tasks you complete (X is set by the host), you get to know one more letter from everyone's roles. You can see these characters below players' names. The letters are not in order and each letter only appears once for every occurance in the role name. Settings determine whether you can guess.",
+  "Lyncher.TaskNum": "Number of Tasks to Complete for Each Letter",
+  "Lyncher.GuessMode": "Can Guess",
+  "Lyncher.Suffix": "<size=70%><#00ffa5>Complete</color> <b>{0}</b> <#00ffa5>tasks for the next letters</color></size>",
   "ParityCopTryHideMsg": "Hide <color=#0D57AF>Inspector</color>'s commands",
   "MaxParityCheckLimit": "Max inspections per game",
   "ParityCheckLimitPerMeeting": "Max inspections per meeting",
