--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -993,7 +993,6 @@
   "UnlockFPS": "Unlock FPS",
   "ForceOwnLanguage": "Force mod to use your language if possible",
   "ForceOwnLanguageRoleName": "Force role names in your language if possible",
-  "VersionCheat": "Bypass version synchronization check",
   "GodMode": "God Mode",
   "EnableDarkTheme": "Enable Dark Theme",
   "AutoDisplayKillLog": "Display Kill-log",
@@ -2623,6 +2622,7 @@
   "EAC.CheatDetected.EAC": "Cheating usage detected (Using AUM)",
   "PressF1ShowMainRoleDes": "F1: Show Role Description",
   "PressF2ShowAddRoleDes": "F2: Show Add-on Description",
+  "PressF3ShowRoleSettings": "F3: Show Role Settings",
   "FakeTask": "Fake Tasks:",
   "PVP.ATK": "Attack",
   "PVP.DF": "Defend",
