--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1031,6 +1031,11 @@
   "AllClosed": "Close All",
   "AllOpen": "Open All",
   "RandomByDoor": "Random",
+  "IncreasedSpeed": "Increased Speed",
+  "IncreasedSpeedDuration": "Increased Speed Duration",
+  "IncreasedVision": "Increased Vision",
+  "IncreasedVisionDuration": "Increased Vision Duration",
+  "ShieldDuration": "Shield Duration",
   "ChangeDecontaminationTime": "Change Decontamination Time (<color=#e84b56>MIRA HQ</color>/<color=#a167c0>Polus</color>)",
   "DecontaminationTimeOnMiraHQ": "Decontamination Time On <color=#e84b56>MIRA HQ</color>",
   "DecontaminationTimeOnPolus": "Decontamination Time On <color=#a167c0>Polus</color>",
@@ -3617,6 +3622,58 @@
   "AdventurerGun.Proxy": "Proxy",
   "AdventurerGun.Prediction": "Prediction",
   "AdventurerGun.RNG": "RNG",
+  "Chef": "Chef",
+  "ChefInfo": "Cook Delicious Meals for Everyone",
+  "ChefInfoLong": "(Crewmates):\\nAs the Chef, you can cook meals for everyone. If a crewmate gets a meal, they'll get a random boost (speed, vision, shield). If an impostor or a neutral killer gets a meal, it will be rotten and they have to spit it out by venting or killing in a specified amount of time or they'll get blinded and frozen for some time.",
+  "Chef.EventTarget": "Effect Applies to",
+  "Chef.ET.RandomPlayer": "Random Player",
+  "Chef.ET.NearestPlayer": "Nearest Player",
+  "Chef.RottenTime": "Time to Spit Out Rotten Food",
+  "Chef.SpitOutTime": "Frozen & Blind Time",
+  "ChefFood.0": "Ice Cream",
+  "ChefFood.1": "Milk Tea",
+  "ChefFood.2": "Chocolate",
+  "ChefFood.3": "Cake",
+  "ChefFood.4": "Donut",
+  "ChefFood.5": "Coke",
+  "ChefFood.6": "Lemonade",
+  "ChefFood.7": "Candied Haws",
+  "ChefFood.8": "Jelly",
+  "ChefFood.9": "Candy",
+  "ChefFood.10": "Milk",
+  "ChefFood.11": "Matcha",
+  "ChefFood.12": "Burning Grass Jelly",
+  "ChefFood.13": "Pineapple Bun",
+  "ChefFood.14": "Pudding",
+  "ChefFood.15": "Coconut Jelly",
+  "ChefFood.16": "Cookies",
+  "ChefFood.17": "Red Bean Toast",
+  "ChefFood.18": "Three Color Dumplings",
+  "ChefFood.19": "Wormwood Dumplings",
+  "ChefFood.20": "Puffs",
+  "ChefFood.21": "Can be Crepe",
+  "ChefFood.22": "Peach Crisp",
+  "ChefFood.23": "Mochi",
+  "ChefFood.24": "Egg Waffle",
+  "ChefFood.25": "Macaron",
+  "ChefFood.26": "Snow Plum Niang",
+  "ChefFood.27": "Fried Yogurt",
+  "ChefFood.28": "Egg Tart",
+  "ChefFood.29": "Muffin",
+  "ChefFood.30": "Sago Dew",
+  "ChefFood.31": "Panna Cotta",
+  "ChefFood.32": "Soufflé",
+  "ChefFood.33": "Croissant",
+  "ChefFood.34": "Toffee",
+  "ChefBoost.Speed": "increased speed",
+  "ChefBoost.Vision": "increased vision",
+  "ChefBoost.Shield": "a shield",
+  "ChefBoost.TPToVent": "a visit to this vent",
+  "ChefBoost.TP": "a visit to this player",
+  "ChefRotten": "diarrhea",
+  "ChefNotify": "The <#d6d6ff>Chef</color> got you some {0}!\\nThis caused you to have <#ffff00>{1}</color>",
+  "ChefBoostSuffix": "<#00ffa5>You have </color>{0}<#00ffa5> for </color><b>{1}</b>s",
+  "ChefRottenSuffix": "<#ffa500>You must</color> <#ffff00>kill or vent</color> <#ffa500>within</color> <b>{0}</b>s",
   "Imitator": "Imitator",
   "ImitatorInfo": "Your kill cooldown shifts",
   "ImitatorInfoLong": "(Neutral):\\nAs the Imitator, your kill cooldown is different after every even numbered kill and every odd numbered kill of yours. You have a separate cooldown after meetings. Your first kill after every meeting will set your cooldown to the Even-Numbered Kill Cooldown, your second kill will set it to the Odd-Numbered Kill Cooldown, and the process repeats until a meeting is called again.",
