--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3981,7 +3981,7 @@
   "Spurt": "Spurt",
   "Prefix.Spurt": "Spurt",
   "SpurtInfo": "Boosts Movement",
-  "SpurtInfoLong": "\\nWhen starting to walk you gain an enormous speed boost, which swiftly deteriorates, untill you have to rest still for a while to rejuvinate your speed.",
+  "SpurtInfoLong": "\\nWhen starting to walk you gain an enormous speed boost, which swiftly deteriorates, untill you have to rest still for a while to rejuvenate your speed.",
   "SpurtMinSpeed": "Min Speed",
   "SpurtMaxSpeed": "Max Speed",
   "SpurtModule": "Speed Modulator",
