--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -4035,6 +4035,15 @@
   "AADelay": "Time to Leave Device",
   "AAWarning": "<#ffff00>You must move away from this device or you die!</color>",
   "AADone": "The process has finished",
+  "Spurt": "Spurt",
+  "Prefix.Spurt": "Spurt",
+  "SpurtInfo": "Boosts Movement",
+  "SpurtInfoLong": "\\nWhen starting to walk you gain an enormous speed boost, which swiftly deteriorates, untill you have to rest still for a while to rejuvenate your speed.",
+  "SpurtMinSpeed": "Min Speed",
+  "SpurtMaxSpeed": "Max Speed",
+  "SpurtModule": "Speed Modulator",
+  "EnableSpurtCharge": "Display The Charge",
+  "SpurtSuffix": "« <color=#c9e8f5>Spurt</color>: {0}% »",
   "Nimble": "Nimble",
   "NimbleInfo": "Grants Vent Access",
   "NimbleInfoLong": "\\nGrants Vent Access for Crewmate Roles.",
