Unshift button trigger (it's amazing), Add Beehive, Add Oxyman, Add Rhapsode, Bug Fixes

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -6,6 +6,7 @@
   "HostColor": "#4bf4ff",
   "Icon": "♥",
   "NameColor": "#00ffa5",
+  "Server": "<#00ffa5>Server:</color> <b>{0}</b>",
   "SubText.Crewmate": "Find and exile the <color=#ff1919>Impostors</color>",
   "SubText.Impostor": "Sabotage and kill everyone",
   "SubText.Neutral": "A team on their own",
@@ -31,23 +32,6 @@
   "MadmateSub": "Help the <color=#ff1919>Impostors</color>",
   "KB_Normal": "Challenger",
   "KB_NormalInfo": "Kill all of them!",
-  "Role.Crewmate": "<color=#8cffff>Crewmate</color>",
-  "Role.Jester": "<color=#ec62a5>Jester</color>",
-  "Role.Opportunist": "<color=#4dff4d>Opportunist</color>",
-  "Role.Convict": "<color=#ff1919>Convict</color>",
-  "Role.Celebrity": "<color=#ee4a55>Celebrity</color>",
-  "Role.Bodyguard": "<color=#185abd>Bodyguard</color>",
-  "Role.Dictator": "<color=#df9b00>Dictator</color>",
-  "Role.Mayor": "<color=#204d42>Mayor</color>",
-  "Role.Doctor": "<color=#80ffdd>Doctor</color>",
-  "Role.Maverick": "<color=#781717>Maverick</color>",
-  "Role.Witch": "<color=#BF5FFF>Witch</color>",
-  "Role.Pursuer": "<color=#617218>Pursuer</color>",
-  "Role.Follower": "<color=#ff9409>Follower</color>",
-  "Role.Amnesiac": "<color=#7FBFFF>Amnesiac</color>",
-  "Role.Sheriff": "<color=#ffb347>Sheriff</color>",
-  "Role.Knight": "<color=#7A7A7A>Vigilante</color>",
-  "Role.Deputy": "<color=#DF9026>Deputy</color>",
   "UnsupportedMap": "This map is not supported by EHR\\nPlease use a supported map or you'll experience issues",
   "GuesserMode": "Guesser Mode",
   "CrewmatesCanGuess": "<color=#8cffff>Crewmates</color> can guess",
@@ -1036,6 +1020,7 @@
   "IncreasedVision": "Increased Vision",
   "IncreasedVisionDuration": "Increased Vision Duration",
   "ShieldDuration": "Shield Duration",
+  "DecreasedSpeed": "Decreased Speed",
   "ChangeDecontaminationTime": "Change Decontamination Time (<color=#e84b56>MIRA HQ</color>/<color=#a167c0>Polus</color>)",
   "DecontaminationTimeOnMiraHQ": "Decontamination Time On <color=#e84b56>MIRA HQ</color>",
   "DecontaminationTimeOnPolus": "Decontamination Time On <color=#a167c0>Polus</color>",
@@ -1322,6 +1307,7 @@
   "SheriffCanKillLovers": "Can Kill <color=#ff9ace>Lovers</color>",
   "SheriffCanKillMadmate": "Can Kill <color=#ff1919>Madmates</color>",
   "SheriffCanKillContagious": "Can Kill <color=#2E8B57>Contagious</color> players",
+  "SheriffKeepsGameGoing": "Keeps the game going",
   "SheriffSetMadCanKill": "Non-<color=#8cffff>Crew</color> <color=#f8cd46>Sheriff</color> Configuration",
   "SheriffMadCanKillImp": "Can kill <color=#ff1919>Impostors</color>",
   "SheriffMadCanKillNeutral": "Can kill <color=#ffab1b>Neutrals</color>",
@@ -2033,6 +2019,7 @@
   "TrapConsecutiveBodies": "Trap Consecutive Bodies",
   "HauntedByEvilSpirit": "Haunted by an Evil Spirit",
   "AbilityCooldown": "Ability Cooldown",
+  "AbilityDuration": "Ability Duration",
   "MonarchKnightCooldown": "Knight Cooldown",
   "MonarchKnightMax": "Maximum Knights",
   "MonarchKnightedPlayer": "You successfully knighted a player!",
@@ -2361,6 +2348,7 @@
   "TabInfo.Addons": "Settings for Add-ons",
   "TabInfo.OtherRoles": "Settings for Ghost roles",
   "TabInfo.TaskSettings": "Modded, specific settings that have a major impact on the game",
+  "TabInfoTip": "<b>Tip:</b> Hold SHIFT to adjust number values by 5 or CTRL to adjust by 10!",
   "OtherRoles.CrewmateRoles": "★ Crewmate Roles",
   "OtherRoles.NeutralRoles": "★ Neutral Roles",
   "OtherRoles.ImpostorRoles": "★ Impostor Roles",
@@ -2568,6 +2556,8 @@
   "CanGuessTarget": "Can Guess their Target",
   "UsePhantomBasis": "Use Phantom Basis for some roles",
   "UsePhantomBasisForNKs": "Even for <#ffab1b>Neutral</color> <#ff1919>Killing</color> (Desynced) roles <#ffff00>(EXPERIMENTAL)</color>",
+  "UseUnshiftTrigger": "Use Unshift Button as Ability Trigger",
+  "UseUnshiftTriggerForNKs": "Even for <#ffab1b>Neutral</color> <#ff1919>Killing</color> (Desynced) roles <#ffff00>(EXPERIMENTAL)</color>",
   "Mad-": "Mad ",
   "Charmed-": "Charmed ",
   "Infected-": "Infected ",
@@ -3128,6 +3118,16 @@
   "DonutGot-4": "\\nDing-dong! A donut delivery is at your door.\\nCourtesy of the Donut Delivery crewmate.\\nSavor the sweetness!",
   "DonutGot-5": "\\nSpecial delivery alert!\\nYou've just received a 'killer' donut from the Donut Delivery crewmate.\\nEnjoy the crime scene... I mean snack!",
   "DonutDeliverCD": "Deliver Cooldown",
+  "DonutDeliverSpeedEffect": "Speed Boost For Players Who Get Donuts",
+  "DonutDeliverSEDelay": "Speed Boost Delay",
+  "DonutDeliverSEAmount": "Increase Speed by",
+  "DonutDeliverSEDuration": "Speed Boost Duration",
+  "DonutDeliverSEEvilsGetDecreased": "<#ff1919>Evil</color> Players Get Decreased Speed",
+  "DonutDeliverSEEvilsDecreaseAmount": "Decrease Speed by",
+  "Rhapsode": "Rhapsode",
+  "RhapsodeInfo": "Sing to Distract the Killers",
+  "RhapsodeInfoLong": "(Crewmates):\\nAs the Rhapsode, you can vent/pet your pet to start singing. During this time, no one can vent or shapeshift since they're distracted by your song. (Settings may exclude Crewmates.)",
+  "Rhapsode.ExcludeCrewmates": "Exclude <#8cffff>Crewmates</color>",
   "Chronomancer": "Chronomancer",
   "ChronomancerInfo": "Charge up your kill button and go ham!",
   "ChronomancerInfoLong": "(Impostors):\\nAs the Chronomancer, when your kill cooldown is up, your kill button starts charging (you'll see the percentage of the charge under your name). When you make a kill, you use the charge. Depending on how much you've charged your kill button up, you'll have a 0 second kill cooldown until the charge runs out. When the charge runs out, your kill cooldown is reset.",
@@ -3625,7 +3625,7 @@
   "AdventurerGun.RNG": "RNG",
   "Chef": "Chef",
   "ChefInfo": "Cook Delicious Meals for Everyone",
-  "ChefInfoLong": "(Crewmates):\\nAs the Chef, you can cook meals for everyone. If a crewmate gets a meal, they'll get a random boost (speed, vision, shield). If an impostor or a neutral killer gets a meal, it will be rotten and they have to spit it out by venting or killing in a specified amount of time or they'll get blinded and frozen for some time.",
+  "ChefInfoLong": "(Crewmates):\\nAs the Chef, you can cook meals for everyone by completing tasks. If a crewmate gets a meal, they'll get a random boost (speed, vision, shield). If an impostor or a neutral killer gets a meal, it will be rotten and they have to spit it out by venting or killing in a specified amount of time or they'll get blinded and frozen for some time.",
   "Chef.EventTarget": "Effect Applies to",
   "Chef.ET.RandomPlayer": "Random Player",
   "Chef.ET.NearestPlayer": "Nearest Player",
@@ -4036,6 +4036,22 @@
   "AADelay": "Time to Leave Device",
   "AAWarning": "<#ffff00>You must move away from this device or you die!</color>",
   "AADone": "The process has finished",
+  "Oxyman": "Oxyman",
+  "OxymanInfo": "Your Oxygen Level Affects Everything",
+  "OxymanInfoLong": "(Crewmates):\\nAs the Oxyman, you have an Oxygen level below your name. The Oxygen level decreases overtime. You have to vent to increase your Oxygen. If the Oxygen level reaches 0%, you die. If it's very low, you're blind. If it's low, you're slower. If it's high, you're faster. If it's very high, you're invulnerable.",
+  "Oxyman.Slow.BelowPercentage": "Slow Below",
+  "Oxyman.Blind.BelowPercentage": "Blind Below",
+  "Oxyman.Fast.AbovePercentage": "Fast Above",
+  "Oxyman.Invulnerable.AbovePercentage": "Invulnerable Above",
+  "Oxyman.IncrementByVenting": "On Venting, Oxygen Level Increases by",
+  "Oxyman.DecreasementEachSecond": "Every Second, Oxygen Level Decreases by",
+  "Beehive": "Beehive",
+  "BeehiveInfo": "Sting Players",
+  "BeehiveInfoLong": "(Neutrals):\\nAs the Beehive, you can sting players by single clicking your kill button on them. Stung players will have a certain time to walk a certain distance (get away from your bees) (distance set by the host), or they die.\\nDouble click on someone with your kill button to kill them normally.\\nKill everyone to win.",
+  "Beehive.Distance": "Distance to Walk",
+  "Beehive.Time": "Time to Walk the Distance",
+  "Beehive.StingCooldown": "Sting Cooldown",
+  "Beehive.Notify": "<#ffff00>You were stung by the Beehive!\\nWalk {0} units away from the Beehive in {1}s or you die!</color>",
   "Spurt": "Spurt",
   "Prefix.Spurt": "Spurt",
   "SpurtInfo": "Boosts Movement",
