Beehive Wins string

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -4649,6 +4649,7 @@
   "WinnerRoleText.Sprayer": "Sprayer Wins!",
   "WinnerRoleText.SoulHunter": "Soul Hunter Wins!",
   "WinnerRoleText.Tiger": "Tiger Wins!",
+  "WinnerRoleText.Beehive": "Beehive Wins!",
   "WinnerRoleText.Specter": "Phantasm Wins!",
   "WinnerRoleText.Hider": "Hiders Win!",
   "WinnerRoleText.Seeker": "Seekers Win!",
