--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2069,7 +2069,7 @@
   "Message.HideGameSettings": "Game settings have been hidden by the host.",
   "Message.NowOverrideText": "Please enter the root folder of the game.\\Language\\English.dat. Change this text in the dat file \\nIf you don't need this feature or want to display regular /n messages. \\nPlease disable [Enable only custom /n messages in the settings.]",
   "Message.NoDescription": "No description",
-  "Message.KickedByDenyName": "<b>{0}</b> was kicked because its name matched <b>{1}</b>",
+  "Message.KickedByDenyName": "<b>{0}</b> was kicked because their name matched <b>{1}</b>",
   "Message.BanedByBanList": "<b>{0}</b> was banned because they were banned in the past.",
   "Message.BanedByEACList": "<b>{0}</b> has been banned because he is in EAC list of Banned people.",
   "Message.DumpfileSaved": "The log file was successfully saved to the desktop, filename: {0}",
@@ -4255,7 +4255,7 @@
   "RememberedMaverick": "You remembered you were a Maverick!",
   "RememberedWitch": "You remembered you were a Witch!",
   "RememberedPursuer": "You remembered you were a Pursuer!",
-  "RememberedFollower": "You remembered you were a Follower!",
+  "RememberedTotocalcio": "You remembered you were a Follower!",
   "RememberedAmnesiac": "You failed to remember your role.",
   "RememberedImpostor": "You remembered you were an Impostor!",
   "RememberedCrewmate": "You remembered you were a Crewmate!",
