--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2170,6 +2170,7 @@
   "CommandDescription.Poll": "Starts a poll. (The question should end with a question mark.)",
   "CommandDescription.PV": "Vote in a poll",
   "CommandDescription.HM": "Send one of the messages as the Messenger",
+  "CommandDescription.Decree": "Use a decree as the President",
   "CommandArgs.ChangeSetting.Name": "The setting's name to change (leave blank to view all settings)",
   "CommandArgs.ChangeSetting.UnknownValue": "(leave blank to view what to put here)",
   "CommandArgs.Rename.Name": "Your new name",
@@ -2220,6 +2221,7 @@
   "CommandArgs.Poll.AnswerD": "The fourth answer (leave blank if not needed)",
   "CommandArgs.PV.Vote": "A/B/C/D",
   "CommandArgs.HM.Id": "1/2/3",
+  "CommandArgs.Decree.Number": "0/1/2/3/4/5 (leave blank to view all decrees)",
   "Commands.ChangeSettingHelp": "<b><u>Arguments:</u></b><size=70%>\\n- map (theskeld/mirahq/polus/dlekseht/airship/thefungle/custom)\\n- impostors (number)\\n- players (number)\\n- recommended (on/off)\\n- confirmejects (on/off)\\n- emergencymeetings (number)\\n- anonymousvotes (on/off)\\n- emergencycooldown (number)\\n- discussiontime (number)\\n- votingtime (number)\\n- playerspeed (float)\\n- crewmatevision (float)\\n- impostorvision (float)\\n- killcooldown (float)\\n- killdistance (short/medium/long/custom)\\n- taskbarupdates (always/meetings/never)\\n- visualtasks (on/off)\\n- commontasks (number)\\n- longtasks (number)\\n- shorttasks (number)\\n- scientistcount (number)\\n- scientistchance (number)\\n- vitalsdisplaycooldown (float)\\n- batteryduration (float)\\n- engineercount (number)\\n- engineerchance (number)\\n- ventusecooldown (float)\\n- maxtimeinvents (float)\\n- guardianangelcount (number)\\n- guardianangelchance (number)\\n- protectcooldown (float)\\n- protectduration (float)\\n- protectvisibletoimpostors (on/off)\\n- shapeshiftercount (number)\\n- shapeshifterchance (number)\\n- shapeshiftduration (float)\\n- shapeshiftcooldown (float)\\n- leaveshapeshiftevidence (on/off)\\n- phantomcount (number)\\n- phantomchance (number)\\n- inviscooldown (float)\\n- invisduration (float)\\n- noisemakercount (number)\\n- noisemakerchance (number)\\n- noisemakerimpostoralert (on/off)\\n- noisemakeralertduration (number)\\n- trackercount (number)\\n- trackerchance (number)\\n- trackduration (float)\\n- trackcooldown (float)\\n- trackdelay (float)\\n- ghostdotasks (on/off)\\n\\n<u><b>Notes:</b></u>\\n1. Upper and lowercase matters\\n2. Where it says custom, you obviously put a number argument after it\\n3. A float is a single precision floating number, like 1.7\\n4. \"ghostdotasks\" causes issues if you set it\\n5. Example uses:\\n   - \"/cs map polus\"\\n   - \"/cs killdistance custom 4\"\\n   - \"/cs trackdelay 1,7\"\\n   - \"/cs confirmejects on\"",
   "PollResultTitle": "Poll Results",
   "Poll.Title": "<#ff0000>➡ POLL ⬅</color>",
@@ -4343,14 +4345,14 @@
   "JudgeCanBeMadmate": "<color=#f8d85a>Judge</color> can become <color=#ff1919>Madmate</color>",
   "MarshallCanBeMadmate": "<color=#5573AA>Marshall</color> can become <color=#ff1919>Madmate</color>",
   "FarseerCanBeMadmate": "<color=#BA55D3>Investigator</color> can become <color=#ff1919>Madmate</color>",
-  "RetributionistCanBeMadmate": "<color=#228B22>Retributionist</color> can become <color=#ff1919>Madmate</color>",
+  "PresidentCanBeMadmate": "<color=#30916f>President</color> can become <color=#ff1919>Madmate</color>",
   "GanSheriffCanBeMadmate": "<color=#f8cd46>Sheriff</color> can be converted",
   "GanMayorCanBeMadmate": "<color=#204d42>Mayor</color> can be converted",
   "GanNGuesserCanBeMadmate": "<color=#eede26>Nice Guesser</color> can be converted",
   "GanJudgeCanBeMadmate": "<color=#f8d85a>Judge</color> can be converted",
   "GanMarshallCanBeMadmate": "<color=#5573AA>Marshall</color> can be converted",
-  "GanRetributionistCanBeMadmate": "<color=#228B22>Retributionist</color> can be converted",
   "GanFarseerCanBeMadmate": "<color=#BA55D3>Investigator</color> can be converted",
+  "GanPresidentCanBeMadmate": "<color=#30916f>President</color> can be converted",
   "RascalAppearAsMadmate": "Appear As <color=#ff1919>Madmate</color> On Ejection",
   "CouncillorDead": " you can't murder from the dead.\"",
   "CouncillorMurderMax": "Sorry, you've reached the maximum amount of murders.",
@@ -4370,6 +4372,10 @@
   "DazzlerResetDazzledVisionOnDeath": "Reset vision of dazzled players on death/eject",
   "DazzleCooldown": "Dazzle Cooldown",
   "DazzleButtonText": "Dazzle",
+  "President": "President",
+  "PresidentInfo": "Control The Game",
+  "PresidentInfoLong": "(Crewmates):\\nAs the President, you have 6 decrees each to be used once in the game. You can only use 1 decree in every meeting. To use a decree, type <b>/decree {number}</b>, replacing {number} with the ID of the corresponding decree. To get a list of decrees and their IDs, type <b>/decree</b>.",
+  "GuessPresident": "You cannot guess a revealed <#30916f>President</color>.",
   "Alchemist": "Alchemist",
   "AlchemistInfo": "Make potions by completing tasks",
   "AlchemistInfoLong": "(Crewmates):\\nAs the Alchemist, you create a potion by completing a task. The potion you made will show up under your role name with its corresponding description and instructions. You can get 7 different potions.",
