--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1948,7 +1948,7 @@
   "LighterSkillInUse": "Ability in use",
   "LighterSkillStop": "Ability expired",
   "MediumshiperKnowPlayerDead": "Someone died somewhere",
-  "TicketsStealerGetTicket": "You've got {0} votes",
+  "TicketsStealerGetTicket": "You've got +{0} votes",
   "BecomeMadmateCuzMadmateMode": "You became a Madmate because you died",
   "ExecutionerRoleChanged": "You became {0} because your target died",
   "SpeedBoosterTaskDone": "Your speed is {0} now",
@@ -2081,8 +2081,9 @@
   "Message.WarnWhoSayBanWord": "<b>{0}</b>, stop sending banned words!",
   "Message.WarnWhoSayBanWordTimes": "<b>{0}</b> has been warned: {1} times \\nif you continue you will be kicked",
   "Message.KickWhoSayBanWordAfterWarn": "<b>{0}</b> received {1} warnings.\\nHe was expelled for forbidden words",
-  "Message.KickedByEAC": "<b>{0}</b>Kicked by EAC, reason:{1}",
-  "Message.BanedByEAC": "<b>{0}</b>Kicked by EAC, reason:{1}",
+  "Message.KickedByEAC": "<b>{0}</b>Kicked by EAC, reason: {1}",
+  "Message.BannedByEAC": "<b>{0}</b>Banned by EAC, reason: {1}",
+  "Message.TempBannedByEAC": "<b>{0}</b>Banned by EAC, reason: {1}",
   "Message.NoticeByEAC": "<b>{0}</b>Detected:{1}",
   "Message.SetLevel": "Your game level is set to: {0}",
   "Message.SetColor": "Your color is set to: {0}",
@@ -4375,7 +4376,19 @@
   "President": "President",
   "PresidentInfo": "Control The Game",
   "PresidentInfoLong": "(Crewmates):\\nAs the President, you have 6 decrees each to be used once in the game. You can only use 1 decree in every meeting. To use a decree, type <b>/decree {number}</b>, replacing {number} with the ID of the corresponding decree. To get a list of decrees and their IDs, type <b>/decree</b>.",
+  "President.Decree.Reveal": "Revealing Decree",
+  "President.Decree.Finish": "Finishing Decree",
+  "President.Decree.Declassification": "Declassification Decree",
+  "President.Decree.GovernmentSupport": "Government Support Decree",
+  "President.Decree.Investigation": "Investigation Decree",
+  "President.Decree.GovernmentRecruiting": "Government Recruiting Decree",
+  "President.Reveal.CanBeConvertedAfterRevealing": "Can be <#ffab1b>converted</color> after revealing",
+  "President.Reveal.ConvertedPresidentCanReveal": "<#ffab1b>Converted</color> <#30916f>President</color> can reveal",
+  "President.GovernmentRecruiting.RecruitedRole": "Recruited role",
+  "President.Help": "Command: /decree {decree ID}\\nYou can see the decree IDs by typing /decree",
+  "President.Recruit.TargetNotifyMessage": "You have been recruited by the <#30916f>President</color>!",
   "GuessPresident": "You cannot guess a revealed <#30916f>President</color>.",
+  "GuessErased": "You cannot guess a player's role that has been erased.",
   "Alchemist": "Alchemist",
   "AlchemistInfo": "Make potions by completing tasks",
   "AlchemistInfoLong": "(Crewmates):\\nAs the Alchemist, you create a potion by completing a task. The potion you made will show up under your role name with its corresponding description and instructions. You can get 7 different potions.",
@@ -4506,7 +4519,7 @@
   "SpiritualistShowGhostArrowForSeconds": "Ghost arrow duration",
   "SpiritualistShowGhostArrowEverySeconds": "Ghost arrow interval",
   "VotesPerKill": "Votes gained for each kill",
-  "PickpocketGetVote": "You've got {0} votes",
+  "PickpocketGetVote": "You've got +{0} votes",
   "VultureArrowsPointingToDeadBody": "Arrows pointing to dead bodies",
   "VultureNumberOfReportsToWin": "Bodies needed to win",
   "VultureBodyReported": "Body eaten!",
