Fix some wrong strings

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -504,7 +504,7 @@
   "InnocentInfo": "Get someone ejected by making them kill you",
   "PelicanInfo": "Eat all players",
   "RevolutionistInfo": "Recruit players to win with you",
-  "FFFInfo": "Kill <color=#ff9ace>Lovers</color> and <color=#00a4ff>Neptunes</color>",
+  "FFFInfo": "Kill <color=#ff9ace>Lovers</color> and <color=#ffab1b>Converted</color> players",
   "GamerInfo": "Consume blood volumes",
   "DarkHideInfo": "Your kills cause power outages",
   "WorkaholicInfo": "Finish all tasks to solo win!",
@@ -4372,7 +4372,7 @@
   "DazzleButtonText": "Dazzle",
   "President": "President",
   "PresidentInfo": "Control The Game",
-  "PresidentInfoLong": "(Crewmates):\\nAs the President, you have 6 decrees each to be used once in the game. You can only use 1 decree in every meeting. To use a decree, type <b>/decree {number}</b>, replacing {number} with the ID of the corresponding decree. To get a list of decrees and their IDs, type <b>/decree</b>.<size=80%>\\n\\nList of decrees and what they do:\\n- Revealing: Reveals you as the President for everyone, makes you unguessable and cuts your vision in half for the rest of the game.\\n- Finishing: Ends the current meeting instantly without counting the votes.\\- Declassification: Everyone will see voting colors at the end of the current meeting.\\n- Government Support: Gives all crewmates +1 ability use.\\n- Investigation: Get info about how many impostors and neutral killers are alive.\\n- Government Recruiting: After using, vote for someone to recruit them (your vote will be canceled and you'll be able to vote normally after this) to recruit that player to the role specified in the settings, if they're a crewmate.</size>",
+  "PresidentInfoLong": "(Crewmates):\\nAs the President, you have 6 decrees each to be used once in the game. You can only use 1 decree in every meeting. To use a decree, type <b>/decree {number}</b>, replacing {number} with the ID of the corresponding decree. To get a list of decrees and their IDs, type <b>/decree</b>.<size=80%>\\n\\nList of decrees and what they do:\\n- Revealing: Reveals you as the President for everyone, makes you unguessable and cuts your vision in half for the rest of the game.\\n- Finishing: Ends the current meeting instantly without counting the votes.\\n- Declassification: Everyone will see voting colors at the end of the current meeting.\\n- Government Support: Gives all crewmates +1 ability use.\\n- Investigation: Get info about how many impostors and neutral killers are alive.\\n- Government Recruiting: After using, vote for someone to recruit them (your vote will be canceled and you'll be able to vote normally after this) to recruit that player to the role specified in the settings, if they're a crewmate.</size>",
   "President.Decree.Reveal": "Revealing Decree",
   "President.Decree.Finish": "Finishing Decree",
   "President.Decree.Declassification": "Declassification Decree",
@@ -4678,7 +4678,7 @@
   "AdditionalWinnerRoleText.Sidekick": "along with Sidekicks",
   "AdditionalWinnerRoleText.Opportunist": "The Opportunist survived",
   "AdditionalWinnerRoleText.Lawyer": "The Lawyer wins along",
-  "AdditionalWinnerRoleText.FFF": "The Hater killed a lover",
+  "AdditionalWinnerRoleText.FFF": "The Hater killed a recruit",
   "AdditionalWinnerRoleText.Provocateur": "The Provocateur wins along",
   "AdditionalWinnerRoleText.NWitch": "The Witch survived",
   "AdditionalWinnerRoleText.Sunnyboy": "And there's endless sunshine!",
