--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -4061,7 +4061,7 @@
   "SpurtMaxSpeed": "Max Speed",
   "SpurtModule": "Speed Modulator",
   "EnableSpurtCharge": "Display The Charge",
-  "SpurtSuffix": "« <color=#c9e8f5>Spurt</color>: {0}% »",
+  "SpurtSuffix": "\\n« <color=#c9e8f5>Spurt</color>: {0}% »",
   "Nimble": "Nimble",
   "NimbleInfo": "Grants Vent Access",
   "NimbleInfoLong": "\\nGrants Vent Access for Crewmate Roles.",
