--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -84,7 +84,7 @@
   "Shapeshifter": "Shapeshifter",
   "Noisemaker": "Noisemaker",
   "Tracker": "Tracker",
-  "Phantom": "Phantasm",
+  "Phantom": "Phantom",
   "EngineerEHR": "Engineer",
   "ScientistEHR": "Scientist",
   "ShapeshifterEHR": "Shapeshifter",
